01cb change in work file

--- a/cb/work-details.html
+++ b/cb/work-details.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Adriya - Minimal, Creative, One Page Bootstrap Template</title>
+<title>Cathyblythe</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/jquery.fancybox.css">
 <link rel="stylesheet" href="css/main.css">
@@ -20,12 +20,12 @@
 <body>
 <!-- header top section -->
 <section class="banner" role="banner">
-  <header id="header">
-    <div class="header-content clearfix"> <a class="logo" href="index.html"><img src="images/logo.png" alt=""></a>
+ <header id="header">
+    <div class="header-content clearfix"> <a class="logo" href="index.html"><img src="images/logo-active.png" alt="CB"></a>
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
-          <li>612.269.8419</li>
-          <li><a href="mainlto:hello@phdl.co">hello@agency.com</a></li>
+          <li>Phone no : +91 9979490817</li>
+          <li><a href="mainlto:hello@phdl.co">ashish0038@gmail.com</a></li>
         </ul>
       </nav>
       <a href="#" class="nav-toggle">Menu<span></span></a> </div>
