--- a/cb/p_ui/index_form_design.html
+++ b/cb/p_ui/index_form_design.html
@@ -16,36 +16,20 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
-
-
-	<script src="https://codyhouse.co/demo/multi-level-accordion-menu/js/modernizr.js"></script>
-	<script src="https://codyhouse.co/demo/multi-level-accordion-menu/js/jquery-2.1.4.js"></script>
 	<style>
+		body {
+			background-color: darkgrey;
+		}
+
 		ol,
 		ul {
 			list-style: none;
 			padding: 0;
 		}
 
-
 		a {
-			color: #a0f6aa;
+			color: lightcoral;
 			text-decoration: none;
-		}
-
-		h1 {
-			text-align: center;
-			width: 90%;
-			margin: 2em auto 0;
-			font-size: 2.4rem;
-			color: #507b55;
-			font-weight: bold;
-		}
-
-		@media only screen and (min-width: 600px) {
-			h1 {
-				font-size: 3.2rem;
-			}
 		}
 
 		input {
@@ -54,10 +38,9 @@
 		}
 
 		.cd-accordion-menu {
-			width: 90%;
-			max-width: 600px;
-			background: #4d5158;
-			margin: 4em auto;
+			background: #f3f3f3;
+			padding: 0;
+			margin: 0;
 		}
 
 		.cd-accordion-menu ul {
@@ -82,16 +65,18 @@
 		.cd-accordion-menu a {
 			position: relative;
 			display: block;
-			padding: 18px 18px 18px 64px;
-			background: #4d5158;
-			box-shadow: inset 0 -1px #555960;
-			color: #ffffff;
-			font-size: 1.6rem;
+			padding: 10px 18px 10px 64px;
+			background: linear-gradient(#f9fbfa 0%, #eef0ef 75%);
+			border: 1px solid #e8ecef;
+			color: #b2b4b7;
+			font-size: 14px;
+			line-height: 23px;
 		}
 
-		.no-touch .cd-accordion-menu label:hover,
-		.no-touch .cd-accordion-menu a:hover {
-			background: #52565d;
+		.cd-accordion-menu label:hover,
+		.cd-accordion-menu a:hover {
+			background: linear-gradient(#f7f8fc 0%, #f0f3f8 75%);
+			color: #32a2e2;
 		}
 
 		.cd-accordion-menu label::before,
@@ -167,14 +152,19 @@
 
 		.cd-accordion-menu ul label,
 		.cd-accordion-menu ul a {
-			background: #35383d;
-			box-shadow: inset 0 -1px #41444a;
+			background: rgba(255, 255, 255, 0.87);
+			border: 1px solid #e8ecef;
+			color: #b2b4b7;
 			padding-left: 82px;
 		}
 
-		.no-touch .cd-accordion-menu ul label:hover,
-		.no-touch .cd-accordion-menu ul a:hover {
-			background: #3c3f45;
+		.cd-accordion-menu ul label:hover,
+		.cd-accordion-menu ul a:hover {
+			background: linear-gradient(#f7f8fc 0%, #f3f7fa 75%);
+			color: #32a2e2;
+			-webkit-transition: -webkit-transform 0.3s;
+			-moz-transition: -moz-transform 0.3s;
+			transition: transform 0.3s;
 		}
 
 		.cd-accordion-menu>li:last-of-type>label,
@@ -184,133 +174,154 @@
 			box-shadow: none;
 		}
 
-		.cd-accordion-menu ul label::before {
-			left: 36px;
-		}
-
-		.cd-accordion-menu ul label::after,
-		.cd-accordion-menu ul a::after {
-			left: 59px;
-		}
-
-		.cd-accordion-menu ul ul label,
-		.cd-accordion-menu ul ul a {
-			padding-left: 100px;
-		}
-
-		.cd-accordion-menu ul ul label::before {
-			left: 54px;
-		}
-
-		.cd-accordion-menu ul ul label::after,
-		.cd-accordion-menu ul ul a::after {
-			left: 77px;
-		}
-
-		.cd-accordion-menu ul ul ul label,
-		.cd-accordion-menu ul ul ul a {
-			padding-left: 118px;
-		}
-
-		.cd-accordion-menu ul ul ul label::before {
-			left: 72px;
-		}
-
-		.cd-accordion-menu ul ul ul label::after,
-		.cd-accordion-menu ul ul ul a::after {
-			left: 95px;
-		}
-
-		@media only screen and (min-width: 600px) {
-			.cd-accordion-menu label,
-			.cd-accordion-menu a {
-				padding: 24px 24px 24px 82px;
-				font-size: 0.9rem;
-			}
-			.cd-accordion-menu label::before {
-				left: 24px;
-			}
-			.cd-accordion-menu label::after {
-				left: 53px;
-			}
-			.cd-accordion-menu ul label,
-			.cd-accordion-menu ul a {
-				padding-left: 106px;
-			}
-			.cd-accordion-menu ul label::before {
-				left: 48px;
-			}
-			.cd-accordion-menu ul label::after,
-			.cd-accordion-menu ul a::after {
-				left: 77px;
-			}
-			.cd-accordion-menu ul ul label,
-			.cd-accordion-menu ul ul a {
-				padding-left: 130px;
-			}
-			.cd-accordion-menu ul ul label::before {
-				left: 72px;
-			}
-			.cd-accordion-menu ul ul label::after,
-			.cd-accordion-menu ul ul a::after {
-				left: 101px;
-			}
-			.cd-accordion-menu ul ul ul label,
-			.cd-accordion-menu ul ul ul a {
-				padding-left: 154px;
-			}
-			.cd-accordion-menu ul ul ul label::before {
-				left: 96px;
-			}
-			.cd-accordion-menu ul ul ul label::after,
-			.cd-accordion-menu ul ul ul a::after {
-				left: 125px;
-			}
-		}
-
 		.cd-accordion-menu.animated label::before {
 			/* this class is used if you're using jquery to animate the accordion */
 			-webkit-transition: -webkit-transform 0.3s;
 			-moz-transition: -moz-transform 0.3s;
 			transition: transform 0.3s;
 		}
+
+		.bg {
+			background-color: #fff;
+			min-height: 656px;
+		}
+
+		.high {
+			font-weight: 500;
+			padding: 2px 5px 1px 5px;
+			line-height: 1.5384616;
+			border: 1px solid transparent;
+			text-transform: uppercase;
+			font-size: 10px;
+			letter-spacing: .1px;
+			border-radius: 2px;
+			color: #fff;
+			margin-left: 5px;
+			float: right;
+		}
+
+		.h_bg {
+			background-color: #4caf50;
+		}
+
+		.l_bg {
+			background-color: #f44336;
+		}
+		/* for table */
+
+		.block {
+			border: 1px solid #e8ecef;
+			background: white;
+			margin: 0 0 0px 4px;
+			border-top: none;
+			padding: 5px;
+			height: 50px;
+		}
+
+		.c_header {
+			padding: 5px 10px;
+			font-size: 12px;
+			font-weight: 600;
+			background-color: #fafafa;
+			background: linear-gradient(to bottom, #fff, #f2f2f2);
+			border: 1px solid #e8ecef;
+			border-radius: 0px;
+			box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+			margin: 0px 0px 0px 4px;
+		}
+
+		table {
+			width: 100%;
+			table-layout: fixed;
+		}
+
+		.tbl-header {
+			background: linear-gradient(to bottom, #fff, #f2f2f2);
+			border: 1px solid #e8ecef;
+			margin: 4px 0px 0px 4px;
+		}
+
+		.tbl-content {
+			height: 500px;
+			overflow-x: auto;
+			margin: 0px 0px 0px 4px;
+			border: 1px solid #eee;
+		}
+
+		.tbl-content2 {
+			overflow-x: auto;
+			margin: 0px 0px 0px 4px;
+			border: 1px solid #eee;
+		}
+
+		th {
+			padding: 8px 13px;
+			text-align: left;
+			font-weight: 500;
+			font-size: 12px;
+			color: #454545;
+			text-transform: uppercase;
+			font-weight: 600;
+		}
+
+		td {
+			padding: 15px;
+			text-align: left;
+			vertical-align: middle;
+			font-weight: 300;
+			font-size: 12px;
+			color: #454545;
+			border-bottom: solid 1px #eee;
+		}
+		/* table styles */
+		/* for custom scrollbar for webkit browser*/
+
+		::-webkit-scrollbar {
+			width: 6px;
+		}
+
+		::-webkit-scrollbar-track {
+			-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+		}
+
+		::-webkit-scrollbar-thumb {
+			-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+		}
+
+		.showdiv {
+			display: table-row;
+		}
+		/* for new UI box*/
+		/* end new UI box*/
+		/* end of table */
 	</style>
 	<!-- Angular Material Library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- Your application bootstrap  -->
 	<script type="text/javascript">
 		/**
      * You must include the dependency on 'ngMaterial' 
      */
 		angular.module('BlankApp', ['ngMaterial']);
-		
-		jQuery(document).ready(function () {
-			var accordionsMenu = $('.cd-accordion-menu');
-
-			if (accordionsMenu.length > 0) {
-
-				accordionsMenu.each(function () {
-					var accordion = $(this);
-					//detect change in the input[type="checkbox"] value
-					accordion.on('change', 'input[type="checkbox"]', function () {
-						var checkbox = $(this);
-						console.log(checkbox.prop('checked'));
-						(checkbox.prop('checked')) ? checkbox.siblings('ul').attr('style', 'display:none;').slideDown(300) : checkbox.siblings('ul').attr('style', 'display:block;').slideUp(300);
-					});
-				});
-			}
-		});
+		function toggle() {
+			$("#hidethis").toggle(500);
+		}
+		function toggle2() {
+			$("#hidethis2").toggle(500);
+		}
 	</script>
 
-	<md-content layout-padding>
-		<div layout="row" layout-align="center center" layout-fill>
-			<div flex="60">
+	<md-content layout-padding style="background-color:#f2f2f2;">
+		<div layout="row" class="bg">
+			<div flex="25">
 				<ul class="cd-accordion-menu animated">
 					<li class="has-children">
-						<input type="checkbox" name="group-1" id="group-1" checked>
-						<label for="group-1">Group 1</label>
-
+						<input type="checkbox" name="group-1" id="group-1">
+						<label for="group-1">Group
+							<span class="high h_bg">high</span>
+							<span class="high l_bg">low</span>
+						</label>
 						<ul>
 							<li class="has-children">
 								<input type="checkbox" name="sub-group-1" id="sub-group-1">
@@ -336,11 +347,8 @@
 											<li><a href="#0">Image</a></li>
 										</ul>
 									</li>
-									<li><a href="#0">Image</a></li>
 								</ul>
 							</li>
-							<li><a href="#0">Image</a></li>
-							<li><a href="#0">Image</a></li>
 						</ul>
 					</li>
 
@@ -383,13 +391,261 @@
 						</ul>
 					</li>
 				</ul>
-				<!-- cd-accordion-menu -->
-			</div>
-			<div flex="40">
 
 			</div>
-		</div>
+			<div flex="75">
+				<div class="c_header">
+					Title box:
+				</div>
+				<div class="block">
+					<div layout="row" layout-align="center center">
+						<div flex="20">
+							1
+						</div>
+						<div flex="20">
+							1
+						</div>
+						<div flex="20">
+							1
+						</div>
+						<div flex="20">
+							1
+						</div>
+					</div>
+				</div>
+				<div class="tbl-header">
+					<table cellpadding="0" cellspacing="0" border="0">
+						<thead>
+							<tr>
+								<th>Code</th>
+								<th>Company</th>
+								<th>Price</th>
+								<th>Data Link</th>
+								<th>Data Link</th>
+							</tr>
+						</thead>
+					</table>
+				</div>
+				<div class="tbl-content">
+					<table cellpadding="0" cellspacing="0" border="0">
+						<tbody>
+							<tr>
+								<td>AAC</td>
+								<td>AUSTRALIAN COMPANY </td>
+								<td>$1.38</td>
+								<td><a href="#" onclick="toggle();">link</a></td>
+								<td><a href="#" onclick="toggle2();">link2</a></td>
+							</tr>
+							<div class="showdiv">
+								<tr id="hidethis" style="display:none;">
+									<td colspan="5" style="padding:1px 5px 5px 1px;">
+										<div class="tbl-header">
+											<table cellpadding="0" cellspacing="0" border="0">
+												<thead>
+													<tr>
+														<th>Code 1111</th>
+														<th>Company</th>
+														<th>Price</th>
+														<th>Data</th>
+														<th>Data</th>
+													</tr>
+												</thead>
+											</table>
+										</div>
+										<div class="tbl-content2">
+											<table cellpadding="0" cellspacing="0" border="0">
+												<tbody>
+													<tr>
+														<td>AAC</td>
+														<td>AUSTRALIAN COMPANY </td>
+														<td>$1.38</td>
+														<td>data</td>
+														<td>data</td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
+									</td>
+								</tr>
+							</div>
+							<tr id="hidethis2" style="display:none;">
+								<td colspan="5" style="padding:1px 5px 5px 1px;">
+									<div class="tbl-header">
+										<table cellpadding="0" cellspacing="0" border="0">
+											<thead>
+												<tr>
+													<th>Code 2222</th>
+													<th>Company</th>
+													<th>Price</th>
+													<th>Data </th>
+													<th>Data</th>
+												</tr>
+											</thead>
+										</table>
+									</div>
+									<div class="tbl-content2">
+										<table cellpadding="0" cellspacing="0" border="0">
+											<tbody>
+												<tr>
+													<td>AAC</td>
+													<td>AUSTRALIAN COMPANY </td>
+													<td>$1.38</td>
+													<td>data</td>
+													<td>data</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+								</td>
+							</tr>
+							<tr>
+								<td>AAD</td>
+								<td>AUSENCO</td>
+								<td>$2.38</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAX</td>
+								<td>ADELAIDE</td>
+								<td>$3.22</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>XXD</td>
+								<td>ADITYA BIRLA</td>
+								<td>$1.02</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAC</td>
+								<td>AUSTRALIAN COMPANY </td>
+								<td>$1.38</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAD</td>
+								<td>AUSENCO</td>
+								<td>$2.38</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAX</td>
+								<td>ADELAIDE</td>
+								<td>$3.22</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>XXD</td>
+								<td>ADITYA BIRLA</td>
+								<td>$1.02</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAC</td>
+								<td>AUSTRALIAN COMPANY </td>
+								<td>$1.38</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAD</td>
+								<td>AUSENCO</td>
+								<td>$2.38</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAX</td>
+								<td>ADELAIDE</td>
+								<td>$3.22</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>XXD</td>
+								<td>ADITYA BIRLA</td>
+								<td>$1.02</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAC</td>
+								<td>AUSTRALIAN COMPANY </td>
+								<td>$1.38</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAD</td>
+								<td>AUSENCO</td>
+								<td>$2.38</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAX</td>
+								<td>ADELAIDE</td>
+								<td>$3.22</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>XXD</td>
+								<td>ADITYA BIRLA</td>
+								<td>$1.02</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAC</td>
+								<td>AUSTRALIAN COMPANY </td>
+								<td>$1.38</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAD</td>
+								<td>AUSENCO</td>
+								<td>$2.38</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAX</td>
+								<td>ADELAIDE</td>
+								<td>$3.22</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>XXD</td>
+								<td>ADITYA BIRLA</td>
+								<td>$1.02</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+							<tr>
+								<td>AAC</td>
+								<td>AUSTRALIAN COMPANY </td>
+								<td>$1.38</td>
+								<td><a href="#">link</a></td>
+								<td><a href="#">link2</a></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+			</div>
 	</md-content>
+
+
 
 
 </body>
