--- a/cb/p_ui/index_form_design.html
+++ b/cb/p_ui/index_form_design.html
@@ -20,277 +20,6 @@
 		body {
 			background-color: darkgrey;
 		}
-
-		ol,
-		ul {
-			list-style: none;
-			padding: 0;
-		}
-
-		a {
-			color: lightcoral;
-			text-decoration: none;
-		}
-
-		input {
-			font-family: "Jaldi", sans-serif;
-			font-size: 1.6rem;
-		}
-
-		.cd-accordion-menu {
-			background: #f3f3f3;
-			padding: 0;
-			margin: 0;
-		}
-
-		.cd-accordion-menu ul {
-			/* by default hide all sub menus */
-			display: none;
-		}
-
-		.cd-accordion-menu li {
-			-webkit-user-select: none;
-			-moz-user-select: none;
-			-ms-user-select: none;
-			user-select: none;
-		}
-
-		.cd-accordion-menu input[type=checkbox] {
-			/* hide native checkbox */
-			position: absolute;
-			opacity: 0;
-		}
-
-		.cd-accordion-menu label,
-		.cd-accordion-menu a {
-			position: relative;
-			display: block;
-			padding: 10px 18px 10px 64px;
-			background: linear-gradient(#f9fbfa 0%, #eef0ef 75%);
-			border: 1px solid #e8ecef;
-			color: #b2b4b7;
-			font-size: 14px;
-			line-height: 23px;
-		}
-
-		.cd-accordion-menu label:hover,
-		.cd-accordion-menu a:hover {
-			background: linear-gradient(#f7f8fc 0%, #f0f3f8 75%);
-			color: #32a2e2;
-		}
-
-		.cd-accordion-menu label::before,
-		.cd-accordion-menu label::after,
-		.cd-accordion-menu a::after {
-			/* icons */
-			content: '';
-			display: inline-block;
-			width: 16px;
-			height: 16px;
-			position: absolute;
-			top: 50%;
-			-webkit-transform: translateY(-50%);
-			-moz-transform: translateY(-50%);
-			-ms-transform: translateY(-50%);
-			-o-transform: translateY(-50%);
-			transform: translateY(-50%);
-		}
-
-		.cd-accordion-menu label {
-			cursor: pointer;
-		}
-
-		.cd-accordion-menu label::before,
-		.cd-accordion-menu label::after {
-			background-image: url(cd-icons.svg);
-			background-repeat: no-repeat;
-		}
-
-		.cd-accordion-menu label::before {
-			/* arrow icon */
-			left: 18px;
-			background-position: 0 0;
-			-webkit-transform: translateY(-50%) rotate(-90deg);
-			-moz-transform: translateY(-50%) rotate(-90deg);
-			-ms-transform: translateY(-50%) rotate(-90deg);
-			-o-transform: translateY(-50%) rotate(-90deg);
-			transform: translateY(-50%) rotate(-90deg);
-		}
-
-		.cd-accordion-menu label::after {
-			/* folder icons */
-			left: 41px;
-			background-position: -16px 0;
-		}
-
-		.cd-accordion-menu a::after {
-			/* image icon */
-			left: 36px;
-			background: url(cd-icons.svg) no-repeat -48px 0;
-		}
-
-		.cd-accordion-menu input[type=checkbox]:checked+label::before {
-			/* rotate arrow */
-			-webkit-transform: translateY(-50%);
-			-moz-transform: translateY(-50%);
-			-ms-transform: translateY(-50%);
-			-o-transform: translateY(-50%);
-			transform: translateY(-50%);
-		}
-
-		.cd-accordion-menu input[type=checkbox]:checked+label::after {
-			/* show open folder icon if item is checked */
-			background-position: -32px 0;
-		}
-
-		.cd-accordion-menu input[type=checkbox]:checked+label+ul,
-		.cd-accordion-menu input[type=checkbox]:checked+label:nth-of-type(n)+ul {
-			/* use label:nth-of-type(n) to fix a bug on safari (<= 8.0.8) with multiple adjacent-sibling selectors*/
-			/* show children when item is checked */
-			display: block;
-		}
-
-		.cd-accordion-menu ul label,
-		.cd-accordion-menu ul a {
-			background: rgba(255, 255, 255, 0.87);
-			border: 1px solid #e8ecef;
-			color: #b2b4b7;
-			padding-left: 82px;
-		}
-
-		.cd-accordion-menu ul label:hover,
-		.cd-accordion-menu ul a:hover {
-			background: linear-gradient(#f7f8fc 0%, #f3f7fa 75%);
-			color: #32a2e2;
-			-webkit-transition: -webkit-transform 0.3s;
-			-moz-transition: -moz-transform 0.3s;
-			transition: transform 0.3s;
-		}
-
-		.cd-accordion-menu>li:last-of-type>label,
-		.cd-accordion-menu>li:last-of-type>a,
-		.cd-accordion-menu>li>ul>li:last-of-type label,
-		.cd-accordion-menu>li>ul>li:last-of-type a {
-			box-shadow: none;
-		}
-
-		.cd-accordion-menu.animated label::before {
-			/* this class is used if you're using jquery to animate the accordion */
-			-webkit-transition: -webkit-transform 0.3s;
-			-moz-transition: -moz-transform 0.3s;
-			transition: transform 0.3s;
-		}
-
-		.bg {
-			background-color: #fff;
-			min-height: 656px;
-		}
-
-		.high {
-			font-weight: 500;
-			padding: 2px 5px 1px 5px;
-			line-height: 1.5384616;
-			border: 1px solid transparent;
-			text-transform: uppercase;
-			font-size: 10px;
-			letter-spacing: .1px;
-			border-radius: 2px;
-			color: #fff;
-			margin-left: 5px;
-			float: right;
-		}
-
-		.h_bg {
-			background-color: #4caf50;
-		}
-
-		.l_bg {
-			background-color: #f44336;
-		}
-		/* for table */
-
-		.block {
-			border: 1px solid #e8ecef;
-			background: white;
-			margin: 0 0 0px 4px;
-			border-top: none;
-			padding: 5px;
-			height: 50px;
-		}
-
-		.c_header {
-			padding: 5px 10px;
-			font-size: 12px;
-			font-weight: 600;
-			background-color: #fafafa;
-			background: linear-gradient(to bottom, #fff, #f2f2f2);
-			border: 1px solid #e8ecef;
-			border-radius: 0px;
-			box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-			margin: 0px 0px 0px 4px;
-		}
-
-		table {
-			width: 100%;
-			table-layout: fixed;
-		}
-
-		.tbl-header {
-			background: linear-gradient(to bottom, #fff, #f2f2f2);
-			border: 1px solid #e8ecef;
-			margin: 4px 0px 0px 4px;
-		}
-
-		.tbl-content {
-			height: 500px;
-			overflow-x: auto;
-			margin: 0px 0px 0px 4px;
-			border: 1px solid #eee;
-		}
-
-		.tbl-content2 {
-			overflow-x: auto;
-			margin: 0px 0px 0px 4px;
-			border: 1px solid #eee;
-		}
-
-		th {
-			padding: 8px 13px;
-			text-align: left;
-			font-weight: 500;
-			font-size: 12px;
-			color: #454545;
-			text-transform: uppercase;
-			font-weight: 600;
-		}
-
-		td {
-			padding: 15px;
-			text-align: left;
-			vertical-align: middle;
-			font-weight: 300;
-			font-size: 12px;
-			color: #454545;
-			border-bottom: solid 1px #eee;
-		}
-		/* table styles */
-		/* for custom scrollbar for webkit browser*/
-
-		::-webkit-scrollbar {
-			width: 6px;
-		}
-
-		::-webkit-scrollbar-track {
-			-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-		}
-
-		::-webkit-scrollbar-thumb {
-			-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-		}
-
-		.showdiv {
-			display: table-row;
-		}
 		/* for new UI box*/
 		/* end new UI box*/
 		/* end of table */
@@ -304,345 +33,59 @@
      * You must include the dependency on 'ngMaterial' 
      */
 		angular.module('BlankApp', ['ngMaterial']);
-		function toggle() {
-			$("#hidethis").toggle(500);
-		}
-		function toggle2() {
-			$("#hidethis2").toggle(500);
-		}
 	</script>
 
 	<md-content layout-padding style="background-color:#f2f2f2;">
-		<div layout="row" class="bg">
-			<div flex="25">
-				<ul class="cd-accordion-menu animated">
-					<li class="has-children">
-						<input type="checkbox" name="group-1" id="group-1">
-						<label for="group-1">Group
-							<span class="high h_bg">high</span>
-							<span class="high l_bg">low</span>
-						</label>
-						<ul>
-							<li class="has-children">
-								<input type="checkbox" name="sub-group-1" id="sub-group-1">
-								<label for="sub-group-1">Sub Group 1</label>
-
-								<ul>
-									<li><a href="#0">Image</a></li>
-									<li><a href="#0">Image</a></li>
-									<li><a href="#0">Image</a></li>
-								</ul>
-							</li>
-							<li class="has-children">
-								<input type="checkbox" name="sub-group-2" id="sub-group-2">
-								<label for="sub-group-2">Sub Group 2</label>
-
-								<ul>
-									<li class="has-children">
-										<input type="checkbox" name="sub-group-level-3" id="sub-group-level-3">
-										<label for="sub-group-level-3">Sub Group Level 3</label>
-
-										<ul>
-											<li><a href="#0">Image</a></li>
-											<li><a href="#0">Image</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-
-					<li class="has-children">
-						<input type="checkbox" name="group-2" id="group-2">
-						<label for="group-2">Group 2</label>
-
-						<ul>
-							<li><a href="#0">Image</a></li>
-							<li><a href="#0">Image</a></li>
-						</ul>
-					</li>
-
-					<li class="has-children">
-						<input type="checkbox" name="group-3" id="group-3">
-						<label for="group-3">Group 3</label>
-
-						<ul>
-							<li><a href="#0">Image</a></li>
-							<li><a href="#0">Image</a></li>
-						</ul>
-					</li>
-
-					<li class="has-children">
-						<input type="checkbox" name="group-4" id="group-4">
-						<label for="group-4">Group 4</label>
-
-						<ul>
-							<li class="has-children">
-								<input type="checkbox" name="sub-group-3" id="sub-group-3">
-								<label for="sub-group-3">Sub Group 3</label>
-
-								<ul>
-									<li><a href="#0">Image</a></li>
-									<li><a href="#0">Image</a></li>
-								</ul>
-							</li>
-							<li><a href="#0">Image</a></li>
-							<li><a href="#0">Image</a></li>
-						</ul>
-					</li>
-				</ul>
-
+		<div layout="row" layout-fill>
+			<div flex="100">
+				<div ng-cloak>
+					<md-content>
+						<md-tabs md-dynamic-height md-border-bottom>
+							<md-tab label="one">
+								<md-content class="md-padding">
+									<h1 class="md-display-2">Tab One</h1>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac
+										dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin
+										consectetur felis nec, feugiat ultricies mi.</p>
+								</md-content>
+							</md-tab>
+							<md-tab label="two">
+								<md-content class="md-padding">
+									<h1 class="md-display-2">Tab Two</h1>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac
+										dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin
+										consectetur felis nec, feugiat ultricies mi. Aliquam erat volutpat. Nam placerat, tortor in ultrices porttitor,
+										orci enim rutrum enim, vel tempor sapien arcu a tellus. Vivamus convallis sodales ante varius gravida. Curabitur
+										a purus vel augue ultrices ultricies id a nisl. Nullam malesuada consequat diam, a facilisis tortor volutpat et.
+										Sed urna dolor, aliquet vitae posuere vulputate, euismod ac lorem. Sed felis risus, pulvinar at interdum quis,
+										vehicula sed odio. Phasellus in enim venenatis, iaculis tortor eu, bibendum ante. Donec ac tellus dictum neque
+										volutpat blandit. Praesent efficitur faucibus risus, ac auctor purus porttitor vitae. Phasellus ornare dui nec
+										orci posuere, nec luctus mauris semper.</p>
+									<p>Morbi viverra, ante vel aliquet tincidunt, leo dolor pharetra quam, at semper massa orci nec magna. Donec posuere
+										nec sapien sed laoreet. Etiam cursus nunc in condimentum facilisis. Etiam in tempor tortor. Vivamus faucibus egestas
+										enim, at convallis diam pulvinar vel. Cras ac orci eget nisi maximus cursus. Nunc urna libero, viverra sit amet
+										nisl at, hendrerit tempor turpis. Maecenas facilisis convallis mi vel tempor. Nullam vitae nunc leo. Cras sed nisl
+										consectetur, rhoncus sapien sit amet, tempus sapien.</p>
+									<p>Integer turpis erat, porttitor vitae mi faucibus, laoreet interdum tellus. Curabitur posuere molestie dictum. Morbi
+										eget congue risus, quis rhoncus quam. Suspendisse vitae hendrerit erat, at posuere mi. Cras eu fermentum nunc.
+										Sed id ante eu orci commodo volutpat non ac est. Praesent ligula diam, congue eu enim scelerisque, finibus commodo
+										lectus.</p>
+								</md-content>
+							</md-tab>
+							<md-tab label="three">
+								<md-content class="md-padding">
+									<h1 class="md-display-2">Tab Three</h1>
+									<p>Integer turpis erat, porttitor vitae mi faucibus, laoreet interdum tellus. Curabitur posuere molestie dictum. Morbi
+										eget congue risus, quis rhoncus quam. Suspendisse vitae hendrerit erat, at posuere mi. Cras eu fermentum nunc.
+										Sed id ante eu orci commodo volutpat non ac est. Praesent ligula diam, congue eu enim scelerisque, finibus commodo
+										lectus.</p>
+								</md-content>
+							</md-tab>
+						</md-tabs>
+					</md-content>
+				</div>
 			</div>
-			<div flex="75">
-				<div class="c_header">
-					Title box:
-				</div>
-				<div class="block">
-					<div layout="row" layout-align="center center">
-						<div flex="20">
-							1
-						</div>
-						<div flex="20">
-							1
-						</div>
-						<div flex="20">
-							1
-						</div>
-						<div flex="20">
-							1
-						</div>
-					</div>
-				</div>
-				<div class="tbl-header">
-					<table cellpadding="0" cellspacing="0" border="0">
-						<thead>
-							<tr>
-								<th>Code</th>
-								<th>Company</th>
-								<th>Price</th>
-								<th>Data Link</th>
-								<th>Data Link</th>
-							</tr>
-						</thead>
-					</table>
-				</div>
-				<div class="tbl-content">
-					<table cellpadding="0" cellspacing="0" border="0">
-						<tbody>
-							<tr>
-								<td>AAC</td>
-								<td>AUSTRALIAN COMPANY </td>
-								<td>$1.38</td>
-								<td><a href="#" onclick="toggle();">link</a></td>
-								<td><a href="#" onclick="toggle2();">link2</a></td>
-							</tr>
-							<div class="showdiv">
-								<tr id="hidethis" style="display:none;">
-									<td colspan="5" style="padding:1px 5px 5px 1px;">
-										<div class="tbl-header">
-											<table cellpadding="0" cellspacing="0" border="0">
-												<thead>
-													<tr>
-														<th>Code 1111</th>
-														<th>Company</th>
-														<th>Price</th>
-														<th>Data</th>
-														<th>Data</th>
-													</tr>
-												</thead>
-											</table>
-										</div>
-										<div class="tbl-content2">
-											<table cellpadding="0" cellspacing="0" border="0">
-												<tbody>
-													<tr>
-														<td>AAC</td>
-														<td>AUSTRALIAN COMPANY </td>
-														<td>$1.38</td>
-														<td>data</td>
-														<td>data</td>
-													</tr>
-												</tbody>
-											</table>
-										</div>
-									</td>
-								</tr>
-							</div>
-							<tr id="hidethis2" style="display:none;">
-								<td colspan="5" style="padding:1px 5px 5px 1px;">
-									<div class="tbl-header">
-										<table cellpadding="0" cellspacing="0" border="0">
-											<thead>
-												<tr>
-													<th>Code 2222</th>
-													<th>Company</th>
-													<th>Price</th>
-													<th>Data </th>
-													<th>Data</th>
-												</tr>
-											</thead>
-										</table>
-									</div>
-									<div class="tbl-content2">
-										<table cellpadding="0" cellspacing="0" border="0">
-											<tbody>
-												<tr>
-													<td>AAC</td>
-													<td>AUSTRALIAN COMPANY </td>
-													<td>$1.38</td>
-													<td>data</td>
-													<td>data</td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
-								</td>
-							</tr>
-							<tr>
-								<td>AAD</td>
-								<td>AUSENCO</td>
-								<td>$2.38</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAX</td>
-								<td>ADELAIDE</td>
-								<td>$3.22</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>XXD</td>
-								<td>ADITYA BIRLA</td>
-								<td>$1.02</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAC</td>
-								<td>AUSTRALIAN COMPANY </td>
-								<td>$1.38</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAD</td>
-								<td>AUSENCO</td>
-								<td>$2.38</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAX</td>
-								<td>ADELAIDE</td>
-								<td>$3.22</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>XXD</td>
-								<td>ADITYA BIRLA</td>
-								<td>$1.02</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAC</td>
-								<td>AUSTRALIAN COMPANY </td>
-								<td>$1.38</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAD</td>
-								<td>AUSENCO</td>
-								<td>$2.38</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAX</td>
-								<td>ADELAIDE</td>
-								<td>$3.22</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>XXD</td>
-								<td>ADITYA BIRLA</td>
-								<td>$1.02</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAC</td>
-								<td>AUSTRALIAN COMPANY </td>
-								<td>$1.38</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAD</td>
-								<td>AUSENCO</td>
-								<td>$2.38</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAX</td>
-								<td>ADELAIDE</td>
-								<td>$3.22</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>XXD</td>
-								<td>ADITYA BIRLA</td>
-								<td>$1.02</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAC</td>
-								<td>AUSTRALIAN COMPANY </td>
-								<td>$1.38</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAD</td>
-								<td>AUSENCO</td>
-								<td>$2.38</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAX</td>
-								<td>ADELAIDE</td>
-								<td>$3.22</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>XXD</td>
-								<td>ADITYA BIRLA</td>
-								<td>$1.02</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-							<tr>
-								<td>AAC</td>
-								<td>AUSTRALIAN COMPANY </td>
-								<td>$1.38</td>
-								<td><a href="#">link</a></td>
-								<td><a href="#">link2</a></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
 
-			</div>
 	</md-content>
 
 
