--- a/cb/p_ui/index.html
+++ b/cb/p_ui/index.html
@@ -49,7 +49,7 @@
 				background-color: #eee;
 			}
 			.sidebar {
-				width: 25%;
+				width: 15%;
 			}
 			.info {
 				width: 100%;
@@ -62,7 +62,7 @@
 				background-color: #eee;
 			}
 			.sidebar {
-				width: 25%;
+				width: 15%;
 				background-color: #eee;
 			}
 			.info {
@@ -84,15 +84,15 @@
 				<!--for profile	-->
 				<div class="overlay-container" style="position: relative;display: block;text-align: center;overflow: hidden;">
 					<img src="profile.png" alt="" style="position: relative;display: block;text-align: center;overflow: hidden;width:100%;">
-					<div class="overlay-to-top" style="font-style: normal;position: absolute;top: auto;padding: 10px;bottom: 0px;font-family: 'Open Sans', sans-serif;left: 0;right: 0px;background: linear-gradient(to bottom, rgba(0, 82, 153, 0.95), rgba(0, 189, 242, 0.91));opacity: 1;color: #ffffff;text-align: left;font-size: 14px;">
-						<p style="font-style: normal;margin: 0;padding: 0;"><em><span style="font-size: 18px;font-style: normal;">Aashish Chauhan</span> <br>
-						<span style="font-size: 14px;font-style: normal;">company Head</span><br>
+					<div class="overlay-to-top" style="font-style: normal;/* position: absolute; */top: auto;padding: 10px;bottom: 0px;font-family: 'Open Sans', sans-serif;left: 0;right: 0px;background: linear-gradient(to bottom, rgba(0, 82, 153, 0.95), rgba(0, 189, 242, 0.91));opacity: 1;color: #ffffff;text-align: left;font-size: 14px;>
+						<p style="font-style: normal;margin: 0;padding: 0;"><em><span style="font-size: 16px;font-style: normal;">Aashish Chauhan</span> <br>
+						<span style="font-size: 12px;font-style: normal;">company Head</span><br>
 						<span style="font-style: normal;">
-						<img style="height:15px;font-size: 12.99px;font-style: normal;    vertical-align: bottom;" src="email.png"> <span style="font-style: normal;    font-size: 13px;">user@gmail.com  </span></em>
-						 <br><img style="height:15px;vertical-align: bottom;font-size: 12.99px;font-style: normal;" src="phone.png"><span style="font-style: normal;    font-size: 13px;"> 99789 98788 </span>
+						<img style="height:12px;font-size: 12.99px;font-style: normal;    vertical-align: bottom;" src="email.png"> <span style="font-style: normal;    font-size: 12px;">user@gmail.com  </span></em>
+						 <br><img style="height:15px;vertical-align: bottom;font-size: 12.99px;font-style: normal;" src="phone.png"><span style="font-style: normal;    font-size: 12px;"> 99789 98788 </span>
 						</span>
 						</p>
-						<a href="#"><img style="position: absolute;right: 20px;top: 37px;bottom: 0;/* left: 0; */" src="right-arrow.png"></a>
+						<a href="#"><img style="position: absolute;right: 10px;/* bottom: 44px; */bottom: 32px;/* left: 0; */height: 25px;" src="right-arrow.png"></a>
 					</div>
 				</div>
 				<!--for profile	-->
